--- a/qml.qrc
+++ b/qml.qrc
@@ -14,5 +14,6 @@
         <file>control/ControlROITextField.qml</file>
         <file>custom_control/BTextArea.qml</file>
         <file>control/ControlLog.qml</file>
+        <file>main_with_virtualkeyboard.qml</file>
     </qresource>
 </RCC>
